--- a/volebniApka/volebniApka.csproj
+++ b/volebniApka/volebniApka.csproj
@@ -14,4 +14,11 @@
       <PackageReference Include="System.Drawing.Common" Version="7.0.0-preview.6.22324.4" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Map.cs" />
+      <Compile Remove="Kraj.cs" />
+      <Compile Remove="Data.cs" />
+      <Compile Remove="VolebniApka.cs" />
+    </ItemGroup>
+
 </Project>
